--- a/Main/Source/ApacheAssets/dnaimages/moderation/includes/moderation.css
+++ b/Main/Source/ApacheAssets/dnaimages/moderation/includes/moderation.css
@@ -463,7 +463,7 @@ h1 {
 .alertMultiple {
 	margin: 0 0 0 10px;
 	padding: 3px 0 3px 15px;
-	background-image : url(http://www.bbc.co.uk/dnaimages/moderation/images/notice.gif);
+	background-image : url(/dnaimages/moderation/images/notice.gif);
 	background-repeat : no-repeat;
 }
 
