--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/admin.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/admin.css
@@ -301,7 +301,6 @@
     .dna-memberdetails .memberDetails { clear:both;}
     
     /*dashboard*/
-    
     .blog #blq-local-nav {background:#58608e url(/dnaimages/dna_messageboard/img/bg-header-blogs.gif) repeat-x 0 100%}
     .blog .dna-main h3 {background-color:#58608e}
     .blog .dna-buttons input {border:1px solid #50546d;background:#58608e url(/dnaimages/dna_messageboard/img/bg-btn-blog.gif) repeat-x 0 100%;}
@@ -336,7 +335,6 @@
     .dna-dashboard form select#s_siteid {width: 18.8em}
     .dna-dashboard form ul.dna-dashboard-links li {margin:10px 10px 0 0}
     .dna-dashboard .dna-mb-intro form label {display:inline;font-weight:bold}
-    /*.dna-dashboard .dna-mb-intro form input {width:16em}*/
     .dna-dashboard .dna-dashboard-cfl form label {display:inline}
     .dna-dashboard .dna-mb-intro form .dna-typelist li label {float:right;display:block;padding:2px;width:16.4em;text-align:left}
     .dna-dashboard .dna-mb-intro form .dna-typelist li input {float:left;}
@@ -366,7 +364,9 @@
 	.dna-dashboard ul.pagination {float: right; margin-right: 5px}
 	.dna-dashboard ul.pagination li {float: left; margin-right: 5px}
 	.dna-dashboard ul.pagination li.current a {text-decoration:none !important;font-weight:bold}
-	.dna-dashboard #s_startdate {width:30%}
+
+	.dna-dashboard .dna-search-userlist {padding:8px 10px 10px 0}
+	.dna-dashboard .dna-userlist h5 {width:10%;padding:10px}
 	
 	.dna-dashboard .dna-dashboard-cfl, .dna-dashboard .dna-dashboard-cfl th, .dna-dashboard .dna-dashboard-cfl td {border:1px solid #CCCCCC}
 	.dna-dashboard .dna-dashboard-cfl span.dna-buttons {margin-left:0}
