Pagination formatting plus swapped table headings around for open/close and close date so they are labelling the correct column. And sneaky fix to breadcrumb, I've removed the "all your sites" or "all your blogs" copy.

--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/admin.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/admin.css
@@ -368,6 +368,8 @@
 	.dna-dashboard .dna-search-userlist {padding:8px 10px 10px 0}
 	.dna-dashboard .dna-userlist h5 {width:10%;padding:10px}
 	
+	.dna-dashboard .cfl-pagination {padding:10px;}
+	.dna-dashboard .cfl-pagination li.pagenum {margin-right:1em}
 	.dna-dashboard .dna-dashboard-cfl, .dna-dashboard .dna-dashboard-cfl th, .dna-dashboard .dna-dashboard-cfl td {border:1px solid #CCCCCC}
 	.dna-dashboard .dna-dashboard-cfl span.dna-buttons {margin-left:0}
 	.dna-dashboard .dna-dashboard-cfl li {line-height:1.6em}
