--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
@@ -253,7 +253,7 @@ p.permalink {margin-top:15px;text-align:right}
 #blq-main #blq-content .dna-boards input.cancel {margin:0 200px 0 8px; background-color:#71aef1}
 .dna-boards p.preview {margin:10px 0 0 24px; padding:0 10px}
 #blq-main #blq-content .dna-boards div#previewpost {margin:10px 24px 0 24px; padding:10px; background-color:#e8eced}
-#blq-main #blq-content .dna-boards div#previewpost .quote em {display:block;padding:10px 0;}
+#blq-main #blq-content .dna-boards div#previewpost .quote em {display:block;padding:0;}
 #blq-main #blq-content .dna-boards div#previewpost h3 {margin-left: 0;padding: 0}
 #blq-main #blq-content .dna-boards div#previewpost p {padding: 10px 0}
 #blq-main #blq-content .dna-boards div#previewpost p.itemdetail {padding: 5px 0}
