--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/admin.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/admin.css
@@ -378,6 +378,7 @@
     .dna-dashboard table td {text-align:right}
     .dna-dashboard table.dna-dashboard-activity th.date {width: 19%}
     .dna-dashboard table.dna-dashboard-contributions th.date,.dna-dashboard table.dna-dashboard-activity th#site {width: 10%}
+	.dna-dashboard table.dna-dashboard-comments th.date,.dna-dashboard table.dna-dashboard-activity th#site {width: 10%}
     .dna-dashboard table.dna-dashboard-activity {width: 98%}
     .dna-dashboard table.dna-dashboard-activity .type {width:8%;}
     .dna-dashboard table td.time {width:20%} 
@@ -385,6 +386,7 @@
     .dna-dashboard table.dna-dashboard-activity td {vertical-align:top;text-align:left;line-height: 1.4em;word-wrap:break-word}
     .dna-dashboard table.dna-dashboard-activity td p {margin-left:0}
     .dna-dashboard table.dna-dashboard-contributions td,  .dna-dashboard table.dna-dashboard-cfl td{vertical-align:top}
+	.dna-dashboard table.dna-dashboard-comments td,  .dna-dashboard table.dna-dashboard-cfl td{vertical-align:top}
 	.dna-dashboard tr.odd {background-color:#ebebd6}
 	
 	.dna-dashboard ul.dna-dashboard-links {padding: 5px 10px}    
